5. Machine Independent Code Generator for TinyC/Ass5_13CS30015/y.output
Terminals unused in grammar

   ENUMERATION
   SINGLE_COMMENT
   MULTI_COMMENT
   STRUCT_KEYWORD
   TYPEDEF_KEYWORD
   UNION_KEYWORD


State 349 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | STRING_LITERAL
    6                   | '(' expression ')'

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' argument_expression_list_opt ')'
   10                   | postfix_expression '.' IDENTIFIER
   11                   | postfix_expression POINTER_OP IDENTIFIER
   12                   | postfix_expression INCREMENT_OP
   13                   | postfix_expression DECREMENT_OP
   14                   | '(' type_name ')' '{' initializer_list '}'
   15                   | '(' type_name ')' '{' initializer_list ',' '}'

   16 argument_expression_list_opt: argument_expression_list
   17                             | %empty

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list ',' assignment_expression_opt

   20 unary_expression: postfix_expression
   21                 | INCREMENT_OP unary_expression
   22                 | DECREMENT_OP unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF_KEYWORD unary_expression
   25                 | SIZEOF_KEYWORD '(' type_name ')'

   26 unary_operator: '&'
   27               | '*'
   28               | '+'
   29               | '-'
   30               | '~'
   31               | '!'

   32 cast_expression: unary_expression
   33                | '(' type_name ')' cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression '*' cast_expression
   36                          | multiplicative_expression '/' cast_expression
   37                          | multiplicative_expression '%' cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression '+' multiplicative_expression
   40                    | additive_expression '-' multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_SHIFT_OP additive_expression
   43                 | shift_expression RIGHT_SHIFT_OP additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression '<' shift_expression
   46                      | relational_expression '>' shift_expression
   47                      | relational_expression LESS_EQUAL_OP shift_expression
   48                      | relational_expression GREATER_EQUAL_OP shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQUAL_OP relational_expression
   51                    | equality_expression NOT_EQUAL_OP relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression '&' equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression '^' AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression '|' exclusive_OR_expression

   58 logical_AND_expression: inclusive_OR_expression
   59                       | logical_AND_expression LOGICAL_AND_OP M inclusive_OR_expression

   60 logical_OR_expression: logical_AND_expression
   61                      | logical_OR_expression LOGICAL_OR_OP M logical_AND_expression

   62 conditional_expression: logical_OR_expression
   63                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: '='
   67                    | MULT_ASSIGN
   68                    | DIV_ASSIGN
   69                    | MOD_ASSIGN
   70                    | ADD_ASSIGN
   71                    | SUB_ASSIGN
   72                    | LEFT_SHIFT_ASSIGN
   73                    | RIGHT_SHIFT_ASSIGN
   74                    | AND_ASSIGN
   75                    | XOR_ASSIGN
   76                    | OR_ASSIGN

   77 expression: assignment_expression
   78           | expression ',' assignment_expression

   79 constant_expression: conditional_expression

   80 declaration: declaration_specifiers init_declarator_list_opt ';'

   81 init_declarator_list_opt: init_declarator_list
   82                         | %empty

   83 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   84                       | type_specifier declaration_specifiers_opt
   85                       | type_qualifier declaration_specifiers_opt
   86                       | function_specifier declaration_specifiers_opt

   87 declaration_specifiers_opt: declaration_specifiers
   88                           | %empty

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list ',' init_declarator

   91 init_declarator: declarator
   92                | declarator '=' initializer

   93 storage_class_specifier: EXTERN_KEYWORD
   94                        | STATIC_KEYWORD
   95                        | AUTO_KEYWORD
   96                        | REGISTER_KEYWORD

   97 type_specifier: VOID_KEYWORD
   98               | CHAR_KEYWORD
   99               | SHORT_KEYWORD
  100               | INT_KEYWORD
  101               | LONG_KEYWORD
  102               | FLOAT_KEYWORD
  103               | DOUBLE_KEYWORD
  104               | SIGNED_KEYWORD
  105               | UNSIGNED_KEYWORD
  106               | BOOL_KEYWORD
  107               | COMPLEX_KEYWORD
  108               | IMAGINARY_KEYWORD
  109               | enum_specifier

  110 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  111                         | type_qualifier specifier_qualifier_list_opt

  112 specifier_qualifier_list_opt: specifier_qualifier_list
  113                             | %empty

  114 enum_specifier: ENUM_KEYWORD identifier_opt '{' enumerator_list '}'
  115               | ENUM_KEYWORD identifier_opt '{' enumerator_list ',' '}'
  116               | ENUM_KEYWORD IDENTIFIER

  117 identifier_opt: IDENTIFIER
  118               | %empty

  119 enumerator_list: enumerator
  120                | enumerator_list ',' enumerator

  121 enumerator: IDENTIFIER
  122           | IDENTIFIER '=' constant_expression

  123 type_qualifier: CONST_KEYWORD
  124               | RESTRICT_KEYWORD
  125               | VOLATILE_KEYWORD

  126 function_specifier: INLINE_KEYWORD

  127 declarator: direct_declarator
  128           | pointer direct_declarator

  129 direct_declarator: IDENTIFIER
  130                  | '(' declarator ')'
  131                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  132                  | direct_declarator '[' STATIC_KEYWORD type_qualifier_list_opt assignment_expression ']'
  133                  | direct_declarator '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'
  134                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  135                  | direct_declarator '(' parameter_type_list_opt ')'
  136                  | direct_declarator '(' identifier_list_opt ')'

  137 parameter_type_list_opt: parameter_type_list
  138                        | %empty

  139 identifier_list_opt: identifier_list

  140 type_qualifier_list_opt: type_qualifier_list
  141                        | %empty

  142 assignment_expression_opt: assignment_expression
  143                          | %empty

  144 pointer: '*' type_qualifier_list_opt
  145        | '*' type_qualifier_list_opt pointer

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 parameter_type_list: parameter_list
  149                    | parameter_list ',' ELLIPSIS

  150 parameter_list: parameter_declaration
  151               | parameter_list ',' parameter_declaration

  152 parameter_declaration: declaration_specifiers declarator
  153                      | declaration_specifiers

  154 identifier_list: IDENTIFIER
  155                | identifier_list ',' IDENTIFIER

  156 type_name: specifier_qualifier_list

  157 initializer: assignment_expression
  158            | '{' initializer_list '}'
  159            | '{' initializer_list ',' '}'

  160 initializer_list: designation_opt initializer
  161                 | initializer_list ',' designation_opt initializer

  162 designation: designator_list '='

  163 designation_opt: designation
  164                | %empty

  165 designator_list: designator
  166                | designator_list designator

  167 designator: '[' constant_expression ']'
  168           | '.' IDENTIFIER

  169 statement: labeled_statement
  170          | compound_statement
  171          | expression_statement
  172          | selection_statement
  173          | iteration_statement
  174          | jump_statement

  175 labeled_statement: IDENTIFIER ':' statement
  176                  | CASE_KEYWORD constant_expression ':' statement
  177                  | DEFAULT_KEYWORD ':' statement

  178 compound_statement: '{' block_item_list_opt '}'

  179 block_item_list_opt: block_item_list
  180                    | %empty

  181 block_item_list: block_item
  182                | block_item_list M block_item

  183 block_item: declaration
  184           | statement

  185 expression_statement: expression_opt ';'

  186 expression_opt: expression
  187               | %empty

  188 selection_statement: IF_KEYWORD '(' expression N ')' M statement N
  189                    | IF_KEYWORD '(' expression N ')' M statement N ELSE_KEYWORD M statement
  190                    | SWITCH_KEYWORD '(' expression ')' statement

  191 iteration_statement: WHILE_KEYWORD '(' M expression N ')' M statement
  192                    | DO_KEYWORD M statement WHILE_KEYWORD '(' M expression ')' ';'
  193                    | FOR_KEYWORD '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
  194                    | FOR_KEYWORD '(' declaration expression_opt ';' expression_opt ')' statement

  195 jump_statement: GOTO_KEYWORD IDENTIFIER ';'
  196               | CONTINUE_KEYWORD ';'
  197               | BREAK_KEYWORD ';'
  198               | RETURN_KEYWORD ';'
  199               | RETURN_KEYWORD expression ';'

  200 translation_unit: external_declaration
  201                 | translation_unit external_declaration

  202 external_declaration: function_definition
  203                     | declaration

  204 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  205 declaration_list_opt: declaration_list
  206                     | %empty

  207 declaration_list: declaration
  208                 | declaration_list declaration

  209 M: %empty

  210 N: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 31
'%' (37) 37
'&' (38) 26 53
'(' (40) 6 9 14 15 25 33 130 135 136 188 189 190 191 192 193 194
')' (41) 6 9 14 15 25 33 130 135 136 188 189 190 191 192 193 194
'*' (42) 27 35 134 144 145
'+' (43) 28 39
',' (44) 15 19 78 90 115 120 149 151 155 159 161
'-' (45) 29 40
'.' (46) 10 168
'/' (47) 36
':' (58) 63 175 176 177
';' (59) 80 185 192 193 194 195 196 197 198 199
'<' (60) 45
'=' (61) 66 92 122 162
'>' (62) 46
'?' (63) 63
'[' (91) 8 131 132 133 134 167
']' (93) 8 131 132 133 134 167
'^' (94) 55
'{' (123) 14 15 114 115 158 159 178
'|' (124) 57
'}' (125) 14 15 114 115 158 159 178
'~' (126) 30
error (256)
IDENTIFIER (258) 1 10 11 116 117 121 122 129 154 155 168 175 195
INTEGER_CONSTANT (259) 2
FLOAT_CONSTANT (260) 3
ENUMERATION (261)
CHAR_CONSTANT (262) 4
STRING_LITERAL (263) 5
ELLIPSIS (264) 149
RIGHT_SHIFT_ASSIGN (265) 73
LEFT_SHIFT_ASSIGN (266) 72
ADD_ASSIGN (267) 70
SUB_ASSIGN (268) 71
MULT_ASSIGN (269) 67
DIV_ASSIGN (270) 68
MOD_ASSIGN (271) 69
AND_ASSIGN (272) 74
XOR_ASSIGN (273) 75
OR_ASSIGN (274) 76
RIGHT_SHIFT_OP (275) 43
LEFT_SHIFT_OP (276) 42
INCREMENT_OP (277) 12 21
DECREMENT_OP (278) 13 22
POINTER_OP (279) 11
LOGICAL_AND_OP (280) 59
LOGICAL_OR_OP (281) 61
LESS_EQUAL_OP (282) 47
GREATER_EQUAL_OP (283) 48
EQUAL_OP (284) 50
NOT_EQUAL_OP (285) 51
SINGLE_COMMENT (286)
MULTI_COMMENT (287)
AUTO_KEYWORD (288) 95
ENUM_KEYWORD (289) 114 115 116
RESTRICT_KEYWORD (290) 124
UNSIGNED_KEYWORD (291) 105
BREAK_KEYWORD (292) 197
EXTERN_KEYWORD (293) 93
RETURN_KEYWORD (294) 198 199
VOID_KEYWORD (295) 97
CASE_KEYWORD (296) 176
FLOAT_KEYWORD (297) 102
SHORT_KEYWORD (298) 99
VOLATILE_KEYWORD (299) 125
CHAR_KEYWORD (300) 98
FOR_KEYWORD (301) 193 194
SIGNED_KEYWORD (302) 104
WHILE_KEYWORD (303) 191 192
CONST_KEYWORD (304) 123
GOTO_KEYWORD (305) 195
SIZEOF_KEYWORD (306) 24 25
BOOL_KEYWORD (307) 106
CONTINUE_KEYWORD (308) 196
IF_KEYWORD (309) 188 189
STATIC_KEYWORD (310) 94 132 133
COMPLEX_KEYWORD (311) 107
DEFAULT_KEYWORD (312) 177
INLINE_KEYWORD (313) 126
STRUCT_KEYWORD (314)
IMAGINARY_KEYWORD (315) 108
DO_KEYWORD (316) 192
INT_KEYWORD (317) 100
SWITCH_KEYWORD (318) 190
DOUBLE_KEYWORD (319) 103
LONG_KEYWORD (320) 101
TYPEDEF_KEYWORD (321)
ELSE_KEYWORD (322) 189
REGISTER_KEYWORD (323) 96
UNION_KEYWORD (324)
UNARY (325)


Nonterminals, with rules where they appear

$accept (95)
    on left: 0
primary_expression (96)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expression (97)
    on left: 7 8 9 10 11 12 13 14 15, on right: 8 9 10 11 12 13 20
argument_expression_list_opt (98)
    on left: 16 17, on right: 9
argument_expression_list (99)
    on left: 18 19, on right: 16 19
unary_expression (100)
    on left: 20 21 22 23 24 25, on right: 21 22 24 32 65
unary_operator (101)
    on left: 26 27 28 29 30 31, on right: 23
cast_expression (102)
    on left: 32 33, on right: 23 33 34 35 36 37
multiplicative_expression (103)
    on left: 34 35 36 37, on right: 35 36 37 38 39 40
additive_expression (104)
    on left: 38 39 40, on right: 39 40 41 42 43
shift_expression (105)
    on left: 41 42 43, on right: 42 43 44 45 46 47 48
relational_expression (106)
    on left: 44 45 46 47 48, on right: 45 46 47 48 49 50 51
equality_expression (107)
    on left: 49 50 51, on right: 50 51 52 53
AND_expression (108)
    on left: 52 53, on right: 53 54 55
exclusive_OR_expression (109)
    on left: 54 55, on right: 55 56 57
inclusive_OR_expression (110)
    on left: 56 57, on right: 57 58 59
logical_AND_expression (111)
    on left: 58 59, on right: 59 60 61
logical_OR_expression (112)
    on left: 60 61, on right: 61 62 63
conditional_expression (113)
    on left: 62 63, on right: 63 64 79
assignment_expression (114)
    on left: 64 65, on right: 18 65 77 78 132 133 142 157
assignment_operator (115)
    on left: 66 67 68 69 70 71 72 73 74 75 76, on right: 65
expression (116)
    on left: 77 78, on right: 6 8 63 78 186 188 189 190 191 192 199
constant_expression (117)
    on left: 79, on right: 122 167 176
declaration (118)
    on left: 80, on right: 183 194 203 207 208
init_declarator_list_opt (119)
    on left: 81 82, on right: 80
declaration_specifiers (120)
    on left: 83 84 85 86, on right: 80 87 152 153 204
declaration_specifiers_opt (121)
    on left: 87 88, on right: 83 84 85 86
init_declarator_list (122)
    on left: 89 90, on right: 81 90
init_declarator (123)
    on left: 91 92, on right: 89 90
storage_class_specifier (124)
    on left: 93 94 95 96, on right: 83
type_specifier (125)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108 109, on right:
    84 110
specifier_qualifier_list (126)
    on left: 110 111, on right: 112 156
specifier_qualifier_list_opt (127)
    on left: 112 113, on right: 110 111
enum_specifier (128)
    on left: 114 115 116, on right: 109
identifier_opt (129)
    on left: 117 118, on right: 114 115
enumerator_list (130)
    on left: 119 120, on right: 114 115 120
enumerator (131)
    on left: 121 122, on right: 119 120
type_qualifier (132)
    on left: 123 124 125, on right: 85 111 146 147
function_specifier (133)
    on left: 126, on right: 86
declarator (134)
    on left: 127 128, on right: 91 92 130 152 204
direct_declarator (135)
    on left: 129 130 131 132 133 134 135 136, on right: 127 128 131
    132 133 134 135 136
parameter_type_list_opt (136)
    on left: 137 138, on right: 135
identifier_list_opt (137)
    on left: 139, on right: 136
type_qualifier_list_opt (138)
    on left: 140 141, on right: 131 132 134 144 145
assignment_expression_opt (139)
    on left: 142 143, on right: 19 131
pointer (140)
    on left: 144 145, on right: 128 145
type_qualifier_list (141)
    on left: 146 147, on right: 133 140 147
parameter_type_list (142)
    on left: 148 149, on right: 137
parameter_list (143)
    on left: 150 151, on right: 148 149 151
parameter_declaration (144)
    on left: 152 153, on right: 150 151
identifier_list (145)
    on left: 154 155, on right: 139 155
type_name (146)
    on left: 156, on right: 14 15 25 33
initializer (147)
    on left: 157 158 159, on right: 92 160 161
initializer_list (148)
    on left: 160 161, on right: 14 15 158 159 161
designation (149)
    on left: 162, on right: 163
designation_opt (150)
    on left: 163 164, on right: 160 161
designator_list (151)
    on left: 165 166, on right: 162 166
designator (152)
    on left: 167 168, on right: 165 166
statement (153)
    on left: 169 170 171 172 173 174, on right: 175 176 177 184 188
    189 190 191 192 193 194
labeled_statement (154)
    on left: 175 176 177, on right: 169
compound_statement (155)
    on left: 178, on right: 170 204
block_item_list_opt (156)
    on left: 179 180, on right: 178
block_item_list (157)
    on left: 181 182, on right: 179 182
block_item (158)
    on left: 183 184, on right: 181 182
expression_statement (159)
    on left: 185, on right: 171
expression_opt (160)
    on left: 186 187, on right: 185 193 194
selection_statement (161)
    on left: 188 189 190, on right: 172
iteration_statement (162)
    on left: 191 192 193 194, on right: 173
jump_statement (163)
    on left: 195 196 197 198 199, on right: 174
translation_unit (164)
    on left: 200 201, on right: 0 201
external_declaration (165)
    on left: 202 203, on right: 200 201
function_definition (166)
    on left: 204, on right: 202
declaration_list_opt (167)
    on left: 205 206, on right: 204
declaration_list (168)
    on left: 207 208, on right: 205 208
M (169)
    on left: 209, on right: 59 61 63 182 188 189 191 192 193
N (170)
    on left: 210, on right: 63 188 189 191 193


State 0

    0 $accept: . translation_unit $end

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   95 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 95 (storage_class_specifier)


State 2

  114 enum_specifier: ENUM_KEYWORD . identifier_opt '{' enumerator_list '}'
  115               | ENUM_KEYWORD . identifier_opt '{' enumerator_list ',' '}'
  116               | ENUM_KEYWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 118 (identifier_opt)

    identifier_opt  go to state 33


State 3

  124 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 124 (type_qualifier)


State 4

  105 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 105 (type_specifier)


State 5

   93 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 93 (storage_class_specifier)


State 6

   97 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 97 (type_specifier)


State 7

  102 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 102 (type_specifier)


State 8

   99 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 99 (type_specifier)


State 9

  125 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 125 (type_qualifier)


State 10

   98 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 98 (type_specifier)


State 11

  104 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 104 (type_specifier)


State 12

  123 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 123 (type_qualifier)


State 13

  106 type_specifier: BOOL_KEYWORD .

    $default  reduce using rule 106 (type_specifier)


State 14

   94 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 94 (storage_class_specifier)


State 15

  107 type_specifier: COMPLEX_KEYWORD .

    $default  reduce using rule 107 (type_specifier)


State 16

  126 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 126 (function_specifier)


State 17

  108 type_specifier: IMAGINARY_KEYWORD .

    $default  reduce using rule 108 (type_specifier)


State 18

  100 type_specifier: INT_KEYWORD .

    $default  reduce using rule 100 (type_specifier)


State 19

  103 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 103 (type_specifier)


State 20

  101 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 101 (type_specifier)


State 21

   96 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 96 (storage_class_specifier)


State 22

  203 external_declaration: declaration .

    $default  reduce using rule 203 (external_declaration)


State 23

   80 declaration: declaration_specifiers . init_declarator_list_opt ';'
  204 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    IDENTIFIER  shift, and go to state 34
    '*'         shift, and go to state 35
    '('         shift, and go to state 36

    $default  reduce using rule 82 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 37
    init_declarator_list      go to state 38
    init_declarator           go to state 39
    declarator                go to state 40
    direct_declarator         go to state 41
    pointer                   go to state 42


State 24

   83 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   84 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  109 type_specifier: enum_specifier .

    $default  reduce using rule 109 (type_specifier)


State 27

   85 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 46
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   86 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 47
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  201 translation_unit: translation_unit . external_declaration

    $end               shift, and go to state 48
    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 49
    function_definition      go to state 31


State 30

  200 translation_unit: external_declaration .

    $default  reduce using rule 200 (translation_unit)


State 31

  202 external_declaration: function_definition .

    $default  reduce using rule 202 (external_declaration)


State 32

  116 enum_specifier: ENUM_KEYWORD IDENTIFIER .
  117 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 117 (identifier_opt)
    $default  reduce using rule 116 (enum_specifier)


State 33

  114 enum_specifier: ENUM_KEYWORD identifier_opt . '{' enumerator_list '}'
  115               | ENUM_KEYWORD identifier_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 50


State 34

  129 direct_declarator: IDENTIFIER .

    $default  reduce using rule 129 (direct_declarator)


State 35

  144 pointer: '*' . type_qualifier_list_opt
  145        | '*' . type_qualifier_list_opt pointer

    RESTRICT_KEYWORD  shift, and go to state 3
    VOLATILE_KEYWORD  shift, and go to state 9
    CONST_KEYWORD     shift, and go to state 12

    $default  reduce using rule 141 (type_qualifier_list_opt)

    type_qualifier           go to state 51
    type_qualifier_list_opt  go to state 52
    type_qualifier_list      go to state 53


State 36

  130 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 34
    '*'         shift, and go to state 35
    '('         shift, and go to state 36

    declarator         go to state 54
    direct_declarator  go to state 41
    pointer            go to state 42


State 37

   80 declaration: declaration_specifiers init_declarator_list_opt . ';'

    ';'  shift, and go to state 55


State 38

   81 init_declarator_list_opt: init_declarator_list .
   90 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 56

    $default  reduce using rule 81 (init_declarator_list_opt)


State 39

   89 init_declarator_list: init_declarator .

    $default  reduce using rule 89 (init_declarator_list)


State 40

   91 init_declarator: declarator .
   92                | declarator . '=' initializer
  204 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement
